2011-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17695: htmlArea RTE: Removing format may remove content

2011-02-22  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #17653: t3editor: wrong size calculation in Chrome for the code completion window (Thanks to Stephan Petzl)
	* Fixed bug #17654: t3editor: some code completion descriptions have &quot; entities instead of real quotes (thanks to Christian Kartnig)

2011-02-22  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17518: Content type "mailform" no longer accepts list of addresses for "Recipient List" (also fixed function description in t3lib_mail_SwiftMailerAdapter)	

2011-02-22  Steffen Ritter  <info@steffen-ritter.net>

	* Fixed bug #16891: showpic.php causes a fatal error if parameters GET variable is not an array (Thanks to Helmut Hummel)
	* Fixed bug #16902: Fatal error in tslib_content_text (Thanks to Jo Hasenau)

2011-02-22  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17672: CSH - each label fires one request
	* Follow-up to #17383: Open forms cannot be saved after "Relogin" (Security Token errors)
	* Fixed bug #17699: ExtDirect API use relative url for ajax.php

2011-02-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #17701: Generated t3x might be corrupted

2011-02-21  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17383: Open forms cannot be saved after "Relogin" (Security Token errors) (Thanks to Helmut Hummel)
	* Fixed bug #17684 Admin Panel renders invalid markup (Thanks to Markus Klein)

2011-02-20  Steffen Kamper  <steffen@typo3.org

	* Follow-up to #17592: ExtDirect API calls are splitted in single requests and slows down page loading

2011-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #17677: htmlArea RTE: Classes configuration is loaded twice

2011-02-20  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17498: The refresh login dialogue is shown even if the session already timed out (Thanks to Helmut Hummel)
